# embodied-teleop

./: CRASH_FIX_REPORT.md  DELIVERY_SUMMARY.md  LICENSE  PROJECT_COMPLETION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_VIDEO_STREAM.md  START.md  START_HERE.md  USAGE_EXAMPLES.md  VIDEO_INTEGRATION_CHECKLIST.md  VIDEO_STREAM_INTEGRATION.md  gradle.properties  settings.gradle.kts  start_video_server.bat  start_video_server.sh  video_server.py  ws_server.py  xr_ws_bridge.py
ServeP/: CPS.py  E05_ServoP_data.csv  send_data.py  servoP_test.py  ws_to_servop.py
app/: build.gradle.kts
app/src/androidTest/java/com/xr/teleop/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/xr/teleop/: MainActivity.kt  XRActivity.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt
native/src/app/: app_main.cpp  app_runtime.h  jni_entry.cpp
native/src/common/: log.cpp  log.h  time.cpp  time.h
native/src/input/: controller_input.cpp  pose_provider.cpp
native/src/renderer/: hud_renderer.cpp  mesh_curved_screen.cpp  video_pipeline.cpp  vk_context.cpp  vk_context.h
native/src/stub/: native_bridge_stub.cpp
native/src/video/: video_texture_bridge.cpp  video_texture_bridge.h  video_texture_jni.cpp  video_timing.cpp
native/src/xr/: xr_actions.cpp  xr_frame_loop.cpp  xr_instance.cpp  xr_runtime.h  xr_session.cpp
(+15 files in other folders)
